fixed: gap ipoteka

--- a/src/components/pages/payment-methods/payment-methods.module.scss
+++ b/src/components/pages/payment-methods/payment-methods.module.scss
@@ -643,8 +643,9 @@
             display: flex;
             flex-direction: column;
 
+            // гэп для одобрения ипотеки
             @layer base {
-              gap: 24px;
+              gap: 40px;
             }
 
             &__caption {
